More refactorings