@@ -312,11 +312,9 @@ public class FlightServer implements AutoCloseable {
         grpcExecutor = null;
       } else {
         exec =
-            Executors.newCachedThreadPool(
-                // Name threads for better debuggability
-                new ThreadFactoryBuilder()
-                    .setNameFormat("flight-server-default-executor-%d")
-                    .build());
+            Executors.newThreadPerTaskExecutor(Thread.ofVirtual()
+            					     .name("flight-server-default-executor-", 0)
+            					     .factory());
         grpcExecutor = exec;
       }
 
